# numerical-optimization

./: README.md  main.py  pyproject.toml
Handin1/: Assignment_Notebook.ipynb  case_studies.py
Handin1/.ipynb_checkpoints/: Assignment_Notebook.ipynb
Handin2/: Assignment_Notebook.ipynb  case_studies.py
Handin3/: case_studies.py  test.ipynb  week_3_cg.py
Handin4/: assignment.ipynb  week_4_ls.py  wolf_line_search.ipynb
Handin5/: assignment.ipynb
